--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,3 +51,13 @@ jobs:
       run: npm run test:ui
     - name: Display softuni username
       run: echo "@daniel124"
+
+  deploy-production:
+    runs-on: ubuntu-latest
+    needs: run-ui-tests
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
